Remove emoji from the main heading

--- a/Align-on-cue/client/align_on_cue.html
+++ b/Align-on-cue/client/align_on_cue.html
@@ -807,7 +807,7 @@ body:not(.no-animations) button {
 </head>
 <body>
 <div class="container">
-  <h1>🎯 Align on Cue</h1>
+  <h1>Align on Cue</h1>
   <p class="subtitle">Verify you're human with a simple alignment task</p>
   
   <div class="instruction">
